add worker group (#36)
