# server/smserver/balancer.go
@@ -1,5 +1,10 @@
 package smserver
 
+import (
+	"fmt"
+	"strings"
+)
+
 type balancer struct {
 	bcs map[string]*balancerContainer
 }
@@ -58,4 +63,46 @@ func newBalanceGroup() *balancerGroup {
 		fixShardIdAndManualContainerId: make(ArmorMap),
 		hbShardIdAndContainerId:        make(ArmorMap),
 	}
+}
+
+type balancerGroupManager struct {
+	balancerGroup map[string]*balancerGroup
+}
+
+func newBalanceWorkerGroupManager() *balancerGroupManager {
+	return &balancerGroupManager{
+		balancerGroup: make(map[string]*balancerGroup),
+	}
+}
+
+func (b *balancerGroupManager) addShard(shardId, containerId, group, workerGroup string) {
+	key := generateBalanceGroupKey(group, workerGroup)
+	bg := b.balancerGroup[key]
+	if bg == nil {
+		b.balancerGroup[key] = newBalanceGroup()
+	}
+	b.balancerGroup[key].fixShardIdAndManualContainerId[shardId] = containerId
+}
+
+func (b *balancerGroupManager) addHbShard(shardId, containerId, group, workerGroup string) {
+	key := generateBalanceGroupKey(group, workerGroup)
+	bg := b.balancerGroup[key]
+	if bg == nil {
+		b.balancerGroup[key] = newBalanceGroup()
+	}
+	b.balancerGroup[key].hbShardIdAndContainerId[shardId] = containerId
+}
+
+var splitMark = "$$@@##"
+
+func generateBalanceGroupKey(group, workerGroup string) string {
+	return fmt.Sprintf("%s%s%s", group, splitMark, workerGroup)
+}
+
+func getGroupAndWorkerGroupByKey(key string) (string, string) {
+	arr := strings.Split(key, splitMark)
+	if len(arr) == 2 {
+		return arr[0], arr[1]
+	}
+	return "", ""
 }
